# aegis-edr

./: README.md  main.py  pyproject.toml
agent/: endpoint_agent.py  file_monitor.py  network_telemetry.py  process_monitor.py  process_tree.py  telemetry_collector.py
api/: main.py
automations/: edr_integrations.py  respond.py
controller/: main.py
dashboard/: main.py
detections/: cloud_rules.yaml  ioc_db.py  matcher.py  rules.yaml  sigma_converter.py  storage.py  yara_scanner.py
docs/: INTEGRATION.md  workflow.md
incident/: management.py
integrations/: alerting.py  siem_connectors.py  threat_intel.py
samples/: telemetry_sample.json
tests/: test_matcher.py
